# o2rus_parser

./: .env  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  models.py  pyproject.toml
alembic/versions/: f077efa584f3_.py
